[package]
name = "snapio-evtx-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
aws-config = "^0.51"
aws-smithy-client = "^0.51"

snafu = "0.7"
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "1", features = ["fs", "io-util", "time", "macros", "rt-multi-thread"] }
serde_json = "1.0"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.tsk]
git = "https://github.com/forensicmatt/libtsk-rs"
tag = "0.5.0"

[dependencies.awssnapio]
version = "0.1.0"
